<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <include
                android:id="@+id/appbar"
                layout="@layout/toolbar" />
            <FrameLayout
                android:id="@+id/flayout_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9.9"
                android:elevation="@dimen/dp_15"
                android:scrollbars="none"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/dark_grey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.1"
                android:background="@color/c_f8f8f8"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/dp_12"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tv_main_news"
                    style="@style/radioBtn_main_tab"
                    android:drawableTop="@drawable/bg_main_tab_home"
                    android:text="@string/str_main_tab_index" />

                <TextView
                    android:id="@+id/tv_main_musics"
                    style="@style/radioBtn_main_tab"
                    android:drawableTop="@drawable/bg_main_tab_music"
                    android:text="@string/str_main_tab_music" />

                <TextView
                    android:id="@+id/tv_main_images"
                    style="@style/radioBtn_main_tab"
                    android:layout_marginTop="@dimen/dp_8"
                    android:drawableTop="@drawable/bg_main_tab_images"
                    android:text="@string/str_main_tab_images" />

                <TextView
                    android:id="@+id/tv_main_movies"
                    style="@style/radioBtn_main_tab"
                    android:drawableTop="@drawable/bg_main_tab_movies"
                    android:text="@string/str_main_tab_movies" />

            </LinearLayout>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/c_f0eff5"
        app:headerLayout="@layout/navi_header_view"
        app:itemIconTint="@color/c_ef5f45"
        app:itemTextColor="@color/c_b8b8b8"
        app:menu="@menu/navigation_menu" />
</android.support.v4.widget.DrawerLayout>
